Remove duplicate J2CL source JavaScript repositories
Modern J2CL consumes original Maven source archives directly. Remove source-JAR JavaScript scanning, generated __js_sources archives, and the now-unused http_archive load-symbol option.\n\nDocument the minimum J2CL revision and preserve the deferred Akasha, Rose migration, and J2CL Import investigations as handoffs.